Fix overlapping gradient bug on small windows

--- a/public_html/css/header.css
+++ b/public_html/css/header.css
@@ -4,6 +4,7 @@
     background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0),rgba(244, 96, 54, 0), rgb(65, 71, 112));
     background-repeat: no-repeat;
     height: 100vh;
+    min-height: 600px;
 }
 
 .navbar {
