--- a/public_html/css/homeStyles.css
+++ b/public_html/css/homeStyles.css
@@ -28,6 +28,7 @@
 
 #intro {
     background: url(../images/flag.jpg) no-repeat center center fixed; 
+    min-height: 600px;
 
     -webkit-background-size: cover;
     -moz-background-size: cover;
